--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "framer-motion": "^10.15.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-calendar": "^4.7.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.6"
+    "@types/js-cookie": "^3.0.6",
+    "@types/react-helmet": "^6.1.11"
   }
 }
